Added tests and functionality for showing and hiding based on accepted status.

--- a/src/templates/directive.cookiepolicy.tpl.html
+++ b/src/templates/directive.cookiepolicy.tpl.html
@@ -1,4 +1,4 @@
-<div class="cookie-policy">
+<div id="cookie-policy" class="cookie-policy" ng-hide="scCookiePolicyAccepted">
   <div class="cookie-policy__text"></div>
   <div class="cookie-policy__buttons">
     <button class="cookie-policy__buttons--button cookie-policy__buttons--confirm"></button>
