Added button text

--- a/src/templates/directive.cookiepolicy.tpl.html
+++ b/src/templates/directive.cookiepolicy.tpl.html
@@ -11,6 +11,7 @@
             class="cookie-policy__buttons--button cookie-policy__buttons--confirm"
             ng-click="setPolicyCookie()"
             >
+        Got it, thanks!
     </button>
   </div>
 </div>
