--- a/src/templates/directive.cookiepolicy.tpl.html
+++ b/src/templates/directive.cookiepolicy.tpl.html
@@ -1,9 +1,9 @@
 <div id="cookie-policy" class="cookie-policy" ng-hide="scCookiePolicyAccepted">
   <div class="cookie-policy__text">
       Our website uses small files called cookies to help us customise your experience. Full details of what these are
-      can be found in our <a id="cookie-policy-link" class="cookie-policy__test--link" ui-sref="{{ cookiePage }}" href="{{ cookiePage }}">Cookies policy</a>.
+      can be found in our <a id="cookie-policy-link" class="cookie-policy__test--link" ng-href="{{ cookiePage }}" href="{{ cookiePage }}">Cookies policy</a>.
       <br />
-      We also support the <a id="irights-principles-link" class="cookie-policy__test--link" ui-sref="{{ iRightsPage }}" href="{{ iRightsPage }}">iRights principles</a> which promote safer access to the internet for children and young people.
+      We also support the <a id="irights-principles-link" class="cookie-policy__test--link" ng-href="{{ iRightsPage }}" href="{{ iRightsPage }}">iRights principles</a> which promote safer access to the internet for children and young people.
   </div>
   <div class="cookie-policy__buttons">
     <button
